JsonLoggingInterceptor added